Minor fix and code flow adjustments