@@ -13,18 +13,19 @@ public class JsonCombiner {
      * @param to The name of the preset being written into.
      * @param path The path of the JSON data being merged.
      */
-    public static void combine(final JsonArgument.Result from, final JsonArgument.Result to, final JsonPath path) {
-        JsonValue fromValue = XjsUtils.getLastContainer(from.json.get(), path);
+    public static void combine(
+            final JsonArgument.Result from, final JsonArgument.Result to, final JsonPath path) {
+        JsonValue fromValue = path.getLastContainer(from.json.get());
         if (fromValue.isObject()) {
-            final String key = path.get(path.size() - 1).left()
+            final String key = path.getLast().left()
                 .orElseThrow(() -> new RuntimeException("Expected an object at end of path."));
             fromValue = fromValue.asObject().get(key);
         } else if (fromValue.isArray()) {
-            final int index = path.get(path.size() - 1).right()
+            final int index = path.getLast().right()
                 .orElseThrow(() -> new RuntimeException("Expected an array at end of path."));
             fromValue = fromValue.asArray().get(index);
         }
-        XjsUtils.setValueFromPath(to.json.get(), path, fromValue);
+        path.setValue(to.json.get(), fromValue);
         XjsUtils.writeJson(to.json.get(), to.file);
     }
 }
